# MapBuildingService

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  dvc.yaml  experiment.yaml  params.yaml  pyproject.toml  run.sh  settings.toml
.dvc/: config
.github/workflows/: lint.yml
app/: config.py  main.py  model.py  utils.py
configs/: lanelet.yaml  segmodel.yaml
data/: .gitignore  model.ckpt.dvc
data/proc/dataset/train/: .gitignore
data/raw/TuSimple/: .gitignore  test_baseline.json.dvc  test_label.json.dvc  test_set.zip.dvc  train_set.zip.dvc
doc/resources/: diagrams.drawio
map_builder_service/: dataset.py  lanenet.py  losses.py  metrics.py  segmodel.py  utils.py
scripts/: experiment.py  preprocess_dataset.py
static/: main.js
templates/: base.html  page.html
